--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Osmar Tineo</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -53,9 +53,9 @@
             </div>
             <div class="iconos">
                 <ul>
-                    <li><a href="mailto:ojtineo@gmail.com"><img src="./img/mail.png" alt="mail"></a></li>
-                    <li><a href=""><img src="./img/github.png" alt="github"></a></a></li>
-                    <li><a href="https://www.linkedin.com/in/osmar-tineo-212b8a166/"><img src="./img/linkedin.png"
+                    <li><a target="_blank" href="mailto:ojtineo@gmail.com"><img src="./img/mail.png" alt="mail"></a></li>
+                    <li><a target="_blank" href="https://github.com/ojtineo/Proyecto-1-cod-latam-OT"><img src="./img/github.png" alt="github"></a></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/osmar-tineo-212b8a166/"><img src="./img/linkedin.png"
                                 alt="linkedin"></a></li>
                 </ul>
             </div>
