--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="cabecera">
-        <a href="#inicio"><img src="img/Logo.png" class="logo" alt="Logo"></a>
+        <a href="#inicio"><img src="./img/Logo.png" class="logo" alt="Logo"></a>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
