--- a/index.html
+++ b/index.html
@@ -28,16 +28,10 @@
             <div class="soy-jus">
                 <img src="https://placekitten.com/400/400" alt="perfil">
                 <h1> Hola! Soy Osmar Tineo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores magni voluptatem
-                    reprehenderit
-                    in rerum reiciendis sequi expedita pariatur. Ratione similique minus quisquam! Ipsum asperiores et
-                    quas
-                    perspiciatis sint beatae orem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores
-                    magni voluptatem
-                    reprehenderit
-                    in rerum reiciendis sequi expedita pariatur. Ratione similique minus quisquam! Ipsum asperiores et
-                    quas
-                    perspiciatis sint beatae.</p>
+                <p>Soy un profesional del Derecho que ha incursionado en el aprendizaje de códigos HTML, CSS y Java
+                    Script, para formarme como desarrollador Front End, bajo el adiestramiento del programa de formación
+                    en programación web Código Pa'lante de Alianza por Venezuela auspiciado por Eidos Global y
+                    Accenture.</p>
                 <a href="https://1drv.ms/b/s!AmrpQ1aVjMy_iBYEmgg1od-xb6bJ?e=VXqGHs">Descargar mi CV</a>
             </div>
         </section>
@@ -45,18 +39,18 @@
         <section id="contacto">
             <div class="hablemos">
                 <h2> Hablemos!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores magni voluptatem
-                    reprehenderit
-                    in rerum reiciendis sequi expedita pariatur. Ratione similique minus quisquam! Ipsum asperiores et
-                    quas
-                    perspiciatis sint beatae.</p>
+                <p>El estudio de mi carrera profesional me ha ayudado a desarrollar muchas habilidades cognitivas, entre
+                    ellas destacan: Pensamiento crítico, Creatividad y Razonamiento. <br>Si deseas contactarme puedes
+                    hacerlo a través de mis redes sociales:</p>
             </div>
             <div class="iconos">
                 <ul>
-                    <li><a target="_blank" href="mailto:ojtineo@gmail.com"><img src="./img/mail.png" alt="mail"></a></li>
-                    <li><a target="_blank" href="https://github.com/ojtineo/Proyecto-1-cod-latam-OT"><img src="./img/github.png" alt="github"></a></a></li>
-                    <li><a target="_blank" href="https://www.linkedin.com/in/osmar-tineo-212b8a166/"><img src="./img/linkedin.png"
-                                alt="linkedin"></a></li>
+                    <li><a target="_blank" href="mailto:ojtineo@gmail.com"><img src="./img/mail.png" alt="mail"></a>
+                    </li>
+                    <li><a target="_blank" href="https://github.com/ojtineo/Proyecto-1-cod-latam-OT"><img
+                                src="./img/github.png" alt="github"></a></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/osmar-tineo-212b8a166/"><img
+                                src="./img/linkedin.png" alt="linkedin"></a></li>
                 </ul>
             </div>
         </section>
